--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title id="title"></title>
 </head>
 <body>
-    <div>Teachable Machine Image Model</div>
-    <button type="button" onclick="init()">Start</button>
-    <div id="webcam-container"></div>
-    <div id="label-container"></div>
+    <div class="header">
+        <h1>街並み判別機</h1>
+        <h2>写真の街並みがどの地域に最も近いかを判定します</h2>
+    </div>
+    <div class="main">
+        <div class="left">
+            <button type="button" onclick="init()">Start</button>
+            <div id="webcam-container"></div>
+        </div>
+        <div class="right">
+            <div id="label-container"></div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script type="text/javascript">
