--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="header">
         <h1>街並み判別機</h1>
-        <h2>画像の街並みがどの地域に最も近いかを判定します</h2>
+        <h2>画像の街並みがどの地域に最も似ているかを判定します</h2>
     </div>
     <div class="main">
         <div class="left">
-            <p>ボタンを押して画像を見せてください</p>
+            <p>ボタンを押して画像を認識させてください</p>
             <button type="button" onclick="init()">クリック</button>
             <div id="webcam-container"></div>
         </div>
