--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 const classPrediction = prediction[i].className + ": " + prediction[i].probability.toFixed(2);
                 labelContainer.childNodes[i].innerHTML = classPrediction;
                 
-                if (prediction[i].probability.toFixed(3) > 0.999 && i !== 0){
+                if (prediction[i].probability.toFixed(3) == 1.000 && i !== 0){
                     window.location.href = "area.html?id=" + (i - 1);
                 }
             }
