--- a/area.html
+++ b/area.html
@@ -13,20 +13,35 @@
   </div>
   <div class="main">
     <div class="left">
+      <h2>人間が見て取れる特徴</h2>
+      <div id="humanFeatures"></div>
     </div>
     <div class="right">
+      <h2>AIが見ている特徴</h2>
+      <div id="AIFeatures"></div>
     </div>
   </div>
   <script type="text/javascript">
-    areas = [
+    const areas = [
       "八王子",
       "川越",
       "金沢"
     ];
     
+    const humanFeatures = [
+      "",
+      "",
+      "",
+    ];
+    const AIFeatures = [
+      "",
+      "",
+      ""
+    ];
+    
     var query = location.search.split("=")[1];
     var area = areas[query];
-    document.getElementById("title").innerHTML = area;
+    document.getElementById("title").innerHTML = "判別結果：" + area;
     document.getElementById("answer").innerHTML = "画像の街並みに最も似ている地域は" + area + "です";
   </script>
 </body>
