--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
             <div id="label-container"></div>
         </div>
     </div>
+    <div class="footer">
+        <div>
+            <h2>画像のコツ</h2>
+            <ul>
+                <li>特徴的な建物・場所ではなく普通の街並みを映していること（駅前：× 住宅街：○）</li>
+                <li>街並みの様子がしっかりと映っていること（ぼやけ：× 通行者：× 障害物：×）</li>
+                <li>街並みと言いつつ森の中や高台からの展望でも認識できること</li>
+            </ul>
+        </div>
+        <div>
+            <h2>認識のさせ方のコツ</h2>
+            <li>逆光を起こさない環境にいること（すぐ近くに光源がないこと）</li>
+            <li>一気に映さず画面の端から真ん中へ移動するように少しずつ認識させること</li>
+            <li>画像の半分も映らないまま結果が出た場合は判定をやり直すこと</li>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script type="text/javascript">
