--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div>
             <h2>画像のコツ</h2>
             <ul>
-                <li>特徴的な建物・場所ではなく普通の街並みを映していること（駅前：× 住宅街：○）</li>
-                <li>街並みの様子がしっかりと映っていること（ぼやけ：× 通行者：× 障害物：×）</li>
+                <li>特徴的な建物・場所ではなく普通の街並みを映していること（駅前：×、住宅街：○）</li>
+                <li>街並みの様子がしっかりと映っていること（ぼやけ：×、通行者：×、障害物：×）</li>
                 <li>街並みと言いつつ森の中や高台からの展望でも認識できること</li>
             </ul>
         </div>
