--- a/area.html
+++ b/area.html
@@ -49,13 +49,13 @@
     
     for (var i = 0; i < humanFeatures.length; i++) {
       var li = document.createElement('li');
-      li.textcontent = humanFeatures[i];
+      li.textContent = humanFeatures[i];
       document.getElementById("humanFeatures").appendChild(li);                                              
     }
     
     for (var i = 0; i < aiFeatures.length; i++) {
       var li = document.createElement('li');
-      li.textcontent = aiFeatures[i];
+      li.textContent = aiFeatures[i];
       document.getElementById("aiFeatures").appendChild(li);                                              
     }
   </script>
