--- a/area.html
+++ b/area.html
@@ -13,10 +13,12 @@
   </div>
   <div class="main">
     <div class="left">
+      <h2>人間が見て取れる特徴</h2>
       <ul id="humanFeatures">
       </ul>
     </div>
     <div class="right">
+      <h2>AIが見ている特徴</h2>
       <ul id="aiFeatures">
       </ul>
     </div>
