--- a/area.html
+++ b/area.html
@@ -15,7 +15,7 @@
     <div class="left">
       <div>
         <h2>基本情報</h2>
-        <ul id="property">
+        <ul id="properties">
         </ul>
       </div>
     </div>
