--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         <h2>画像の街並みがどの地域に最も似ているかを判定します</h2>
     </div>
     <div class="main">
-        <div class="left">
-            <p>ボタンを押して画像を認識させてください</p>
-            <button type="button" onclick="init()">クリック</button>
-            <div id="webcam-container"></div>
-        </div>
-        <div class="right">
-            <div id="label-container"></div>
+        <div class="container">
+            <div>
+                <p>ボタンを押して画像を認識させてください</p>
+                <button type="button" onclick="init()">クリック</button>
+                <div id="webcam-container"></div>
+            </div>
+            <div>
+                <div id="label-container"></div>
+            </div>
         </div>
     </div>
     <div class="footer">
