--- a/area.html
+++ b/area.html
@@ -12,21 +12,23 @@
     <h1 id="answer"></h1>
   </div>
   <div class="main">
-    <div class="left">
+    <div class="container">
       <div>
-        <h2>基本情報</h2>
-        <ul id="properties">
-        </ul>
+        <div>
+          <h2>基本情報</h2>
+          <ul id="properties">
+          </ul>
+        </div>
       </div>
-    </div>
-    <div class="right">
       <div>
-        <h2>人間が見て取れる特徴</h2>
-        <ul id="humanFeatures">
-        </ul>
-        <h2>AIが見ている特徴</h2>
-        <ul id="aiFeatures">
-        </ul>
+        <div>
+          <h2>人間が見て取れる特徴</h2>
+          <ul id="humanFeatures">
+          </ul>
+          <h2>AIが見ている特徴</h2>
+          <ul id="aiFeatures">
+          </ul>
+        </div>
       </div>
     </div>
   </div>
