--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div id="webcam-container"></div>
             </div>
             <div>
+                <p>パラメータ</p>
                 <div id="label-container"></div>
             </div>
         </div>
