--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </div>
     <div class="main">
         <div class="container">
-            <div>
+            <div class="left">
                 <p>ボタンを押して画像を認識させてください</p>
                 <button type="button" onclick="init()">クリック</button>
                 <div id="webcam-container"></div>
             </div>
-            <div>
+            <div class="right">
                 <p>パラメータ</p>
                 <div id="label-container"></div>
             </div>
