--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://suzukisoichiro.github.io/kadai/style.css" />
     <title>街並み判別機</title>
 </head>
 <body>
@@ -14,12 +11,12 @@
     </div>
     <div class="main">
         <div class="container">
-            <div class="left">
+            <div>
                 <p>ボタンを押して画像を認識させてください</p>
                 <button type="button" onclick="init()">クリック</button>
                 <div id="webcam-container"></div>
             </div>
-            <div class="right">
+            <div>
                 <p>パラメータ</p>
                 <div id="label-container"></div>
             </div>
